[package]
name = "bobsled"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast, embedded key-value store NIF for Elixir using Sled"
license = "MIT"

[lib]
name = "bobsled"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
sled = "0.34"
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []